k8s/react-deployment.yml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: react-deployment
  namespace: lgcns

spec:
  revisionHistoryLimit: 2
  
  replicas: 1
  selector:
    matchLabels:
      app: react

  template:
    metadata:
      labels:
        app: react
    spec:
      containers:
        - name: react-container
          image: 933090817123.dkr.ecr.ap-northeast-2.amazonaws.com/react-0chotona-frontend:latest
          ports:
          - containerPort: 80
          


---
apiVersion: v1
kind: Service
metadata:
  name: react-service
  namespace: lgcns
spec:
  type: ClusterIP 
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: react
