k8s/react-service.yml
# blue - green 배포 전략을 위해 service 별도로
apiVersion: v1
kind: Service
metadata:
  name: react-service
  namespace: lgcns
spec:
  type: ClusterIP 
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: react
    # blue-deployment
    version: blue
