k8s/react-ingress.yml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  name: react-ingress
  namespace: lgcns
  annotations:

spec:
  ingressClassName: nginx
  rules:
  - host: react.0chotona.store
    http:
      paths:
      # http://server.0chotona.store/
      - path: /
        pathType: Prefix
        backend:
          service:
            name: react-service
            port:
              number: 80
